--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=spring-security-session-login
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
